- Tags in Seitenbaum gibts nicht mehr (kein Vps_Component_Acl->allowTag())
- aclClass MUSS in application/config.ini angegeben werden
- Columns admin ist jetzt keine Form mehr sondern ein Grid
- .webStandard strong/em/ol/ul/li ist jetzt im vps und sollte in webs entfernt werden
- newsListView und eventsListView Teaser haben jetzt ein nl2br

== 1.10 ==
Erstellt: 09.06.10
Stable: 16.08.10
Neue Features:
- Generator Plugins
- Generator Plugin: Tags
- needsParentComponentClass Setting, damit wird die $parentComponentClass bei getSettings
  übergeben
- ExtConfig ist eigene Klasse - statt Admin::getExtConfig, setzen über extConfig Setting
- Vpc_List_Switch hat transitions (fade ist jetzt standard) und die weiter-pfeile
  funktionieren über das ende hinaus und fangen wieder von vorn an
- Directory Administration: es gibt jetzt ExtConfigTabs
- Neues EyeCandy: Vps.Switch.Overlay
- Administrierbare Redirects

möglicherweise nicht kompatible Änderungen:
- editComponents werden im Seitenbaum nur mehr berücksichtigt wenn direkt unter der bearbeitenden Komponente liegen
  (indirekt nur wenn der ganze Pfad editComponents eingestellt hat)
- Directories Administration: o Admin::_getContentClass gibts nicht mehr
                              o idTemplate muss nicht mehr gesetzt werden
- editComponents werden auch bei Paragraphs berücksichtigt
- Vpc_Basic_Flash_Component gibts nicht mehr, stattdessen Flash_Code und Flash_Upload
  Vpc_Basic_Flash_Component mit Upload (nicht Url) wird nicht autom. konvertiert
- Vpc_Columns::getSettings beöntigt $parentComponentClass Argument, muss bei abgeleiteten
  durchgeschliffen werden
- Vpc_List_Switch hat options, müssen im Template ausgegeben werden
- Admin::getExtConfig gibts nicht mehr, durch extConfig Setting ersetzen
- Vpc_Abstract_List_*Admin und Vpc_Abstract_Composite_*Admin gibts nicht mehr, stattdessen
  sollte die passende extConfig Einstellung gesetzt werden
- Update auf Zend 1.10.7

== 1.9 ==
Erstellt: 07.05.10
Stable: 09.06.10