@@ -5,7 +5,7 @@ class Vpc_Root_LanguageRoot_Component extends Vpc_Root_Abstract
     {
         $ret = parent::getSettings();
         $ret['generators']['language'] = array(
-            'class' => 'Vps_Component_Generator_PseudoPage_Static',
+            'class' => 'Vpc_Root_LanguageRoot_Generator',
             'component' => array(
                 'de'=>'Vpc_Root_LanguageRoot_Language_Component',
                 'en'=>'Vpc_Root_LanguageRoot_Language_Component'
